# cockup

./: .gitignore  AGENTS.md  README.md  README_zh-cn.md  justfile  pyproject.toml  setup.py
.github/workflows/: pypi.yaml
.serena/: project.yml
cockup/: main.py
cockup/src/: config.py  hooks.py  rules.py  zap.py
sample/: README.md  another_config.yaml  config.yaml
sample/dst/config/: config_file.txt
sample/src/: system_log.txt
sample/src/log_folder/: application_log.txt
tests/: test_config.py  test_hooks.py  test_zap.py
