[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cockup"
version = "0.1.0"
description = "Yet another backup tool for various configurations."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "huaium", email = "huaium233@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["PyYAML>=6.0", "rich>=13.0.0", "click>=8.0.0"]

[project.scripts]
cockup = "cockup.main:main"

[project.urls]
Homepage = "https://github.com/huaium/cockup"
Repository = "https://github.com/huaium/cockup"
Issues = "https://github.com/huaium/cockup/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cockup*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
cockup = ["*.yaml", "*.yml"]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov>=4.0", "pytest-mock>=3.10"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--strict-config", "--verbose"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
