[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cockup"
description = "Yet another backup tool for various configurations"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.12,<3.13"
authors = [{ name = "huaium", email = "huaium233@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "PyYAML>=6.0,<6.1",
    "rich>=14.1,<14.2",
    "click>=8.2,<8.3",
    "pydantic>=2.11,<2.12",
    "setuptools-scm>=8.3,<8.4",
]

[project.scripts]
cockup = "cockup.main:main"

[project.urls]
Homepage = "https://github.com/huaium/cockup"
Repository = "https://github.com/huaium/cockup"
Issues = "https://github.com/huaium/cockup/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cockup*"]
exclude = ["tests*"]

[tool.setuptools_scm]
write_to = "cockup/__init__.py"
fallback_version = "0.0.0"
local_scheme = "no-local-version"

[project.optional-dependencies]
test = ["pytest>=8.4,<8.5", "pytest-cov>=6.2,<6.3", "pytest-mock>=3.14,<3.15"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--strict-config", "--verbose"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
